--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -1,46 +1,36 @@
-name: SBOM & CVE Scan
+name: SBOM & CVE Scan
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   generate-sbom:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install Syft & Grype
+      - name: Install Syft
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
-          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
-
-      - name: Generate SBOM
+      - name: Build SBOM
         run: syft . -o cyclonedx-json=sbom.json
-
       - name: Upload SBOM
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: sbom
           path: sbom.json
 
   scan-sbom:
-    needs: generate-sbom
     runs-on: ubuntu-latest
+    needs: generate-sbom
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: sbom
-          path: .
-
       - name: Install Grype
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
-
-      - name: Scan SBOM (fail‑on ≥ medium)
-        run: |
-          grype sbom:sbom.json --fail-on medium
+      - name: CVE scan
+        run: grype sbom:sbom.json --fail-on medium
