--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -1,33 +1,54 @@
-name: SBOM & CVE Scan
+# .github/workflows/sbom-cve.yml
+name: SBOM & CVE Scan
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+
+permissions:
+  contents: read
+  security-events: write
 
 jobs:
-  generate-sbom:
+  sbom-scan:
+    name: Generate SBOM and scan for vulnerabilities
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: |
-          curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
-      - run: syft . -o cyclonedx-json=sbom.json
-      - uses: actions/upload-artifact@v4
-        with:
-          name: sbom
-          path: sbom.json
 
-  scan-sbom:
-    runs-on: ubuntu-latest
-    needs: generate-sbom
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v4
         with:
-          name: sbom
-      - run: |
-          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
-      - name: CVE scan
-        # игнорируем High, валимся только на Critical
-        run: grype sbom:sbom.json --fail-on critical
+          python-version: "3.x"
+
+      # ──────────────── Syft (SBOM) ────────────────
+      - name: Install Syft v0.80.0
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh \
+            | sh -s -- -b /usr/local/bin v0.80.0
+
+      - name: Generate SBOM with Syft
+        run: |
+          syft . -o cyclonedx-json=sbom.json
+
+      # ──────────────── Grype Scan ────────────────
+      - name: Install Grype v0.78.0
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh \
+            | sh -s -- -b /usr/local/bin v0.78.0
+
+      - name: Run Grype vulnerability scan
+        run: |
+          grype sbom:sbom.json --fail-on medium
+
+      # ──────────────── Trivy Scan ────────────────
+      - name: Install Trivy via GitHub Action
+        uses: aquasecurity/trivy-action@v0.10.1
+
+      - name: Run Trivy CVE scan
+        run: |
+          trivy sbom.json --severity HIGH,CRITICAL
