--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           python-version: "3.x"
 
-      # ─────────────── Syft (SBOM) ───────────────
+      # ──────────────── Syft (SBOM) ────────────────
       - name: Install Syft v0.80.0
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh \
@@ -35,7 +35,7 @@ jobs:
         run: |
           syft . -o cyclonedx-json=sbom.json
 
-      # ─────────────── Grype Scan ───────────────
+      # ──────────────── Grype Scan ────────────────
       - name: Install Grype v0.78.0
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh \
@@ -45,7 +45,7 @@ jobs:
         run: |
           grype sbom:sbom.json --fail-on medium
 
-      # ─────────────── Trivy Scan ───────────────
+      # ──────────────── Trivy Scan ────────────────
       - name: Install Trivy via GitHub Action
         uses: aquasecurity/trivy-action@v0.34.1
 
