fix(ci): заменить trivy-action@v0.34.1 → @v0.30.0, убрать Python 3.9, обновить requires-python ≥3.10

--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -47,7 +47,8 @@ jobs:
 
       # ──────────────── Trivy Scan ────────────────
       - name: Install Trivy via GitHub Action
-        uses: aquasecurity/trivy-action@v0.34.1
+        # ← здесь заменили на @v0.30.0, потому что v0.34.1 отсутствует
+        uses: aquasecurity/trivy-action@v0.30.0
 
       - name: Run Trivy CVE scan
         run: |
