--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -47,8 +47,7 @@ jobs:
 
       # ──────────────── Trivy Scan ────────────────
       - name: Install Trivy via GitHub Action
-        # ← здесь заменили на @v0.30.0, потому что v0.34.1 отсутствует
-        uses: aquasecurity/trivy-action@v0.30.0
+        uses: aquasecurity/trivy-action@main
 
       - name: Run Trivy CVE scan
         run: |
