--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -17,49 +17,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 1) Checkout repository
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 1. Checkout репозитория
+      # ─────────────────────────────────────────────────────────────────────
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 2) Install Trivy via aquasecurity/trivy-action@master
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 2. Install Trivy
+      # ─────────────────────────────────────────────────────────────────────
       - name: Install Trivy
         uses: aquasecurity/trivy-action@master
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 3) Generate SBOM in CycloneDX-JSON format (sbom.json)
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 3. Generate SBOM (CycloneDX-JSON)
+      # ─────────────────────────────────────────────────────────────────────
       - name: Generate SBOM (CycloneDX)
         run: |
-          # Генерируем SBOM в CycloneDX-JSON
+          # Генерируем SBOM в формате CycloneDX-JSON
           trivy sbom --format cyclonedx --output sbom.json .
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 4) Scan generated SBOM for HIGH/CRITICAL vulnerabilities
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 4. Scan SBOM for HIGH/CRITICAL vulnerabilities
+      # ─────────────────────────────────────────────────────────────────────
       - name: Scan SBOM for HIGH/CRITICAL vulnerabilities
         run: |
-          # Проверим sbom.json на уязвимости категорий HIGH/CRITICAL
+          # Сканируем sbom.json на уязвимости категории HIGH и CRITICAL
           trivy sbom --format table --scanners vuln --severity HIGH,CRITICAL sbom.json
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 5) Upload sbom.json as artifact
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 5. Upload sbom.json как артефакт
+      # ─────────────────────────────────────────────────────────────────────
       - name: Upload SBOM artifact
         uses: actions/upload-artifact@v3
         with:
           name: sbom-json
           path: sbom.json
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 6) Generate JSON report (optional) and upload it
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 6. Generate Trivy JSON report (optional) и upload
+      # ─────────────────────────────────────────────────────────────────────
       - name: Generate Trivy JSON report
         if: always()
         run: |
+          # Генерируем JSON-отчёт о HIGH/CRITICAL уязвимостях
           trivy sbom \
             --format json \
             --scanners vuln \
