--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -32,7 +32,7 @@ jobs:
       - name: 🗒️ Generate SBOM (CycloneDX JSON)
         run: |
           # Генерируем SBOM в формате CycloneDX-JSON и сохраняем в sbom.json
-          syft . --output cyclonedx-json=sbom.json
+          syft packages . --output cyclonedx-json=sbom.json
 
       # ────────────────────────────────────────────────────────────────
       - name: 📤 Upload SBOM (CycloneDX JSON)
