ci: install syft cli

--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -23,11 +23,10 @@ jobs:
         uses: actions/checkout@v4
 
       # ────────────────────────────────────────────────────────────────
-      - name: 🛠 Install Syft (v0.82.0 – совместимый)
+      - name: Install Syft CLI
         run: |
-          # Скачиваем Syft v0.82.0 (последняя версия, с которой Trivy стабильно понимает CycloneDX)
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh \
-            | sh -s -- -b /usr/local/bin v0.82.0
+            | sh -s -- -b /usr/local/bin v0.98.0
       # ────────────────────────────────────────────────────────────────
       - name: 🗒️ Generate SBOM (CycloneDX JSON)
         run: |
