--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -27,11 +27,19 @@ jobs:
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh \
             | sh -s -- -b /usr/local/bin v0.98.0
-      # ────────────────────────────────────────────────────────────────
-      - name: 🗒️ Generate SBOM (CycloneDX JSON)
+
+      - name: Install Grype CLI
         run: |
-          # Генерируем SBOM в формате CycloneDX-JSON и сохраняем в sbom.json
-          syft packages . --output cyclonedx-json=sbom.json
+          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh \
+            | sh -s -- -b /usr/local/bin v0.70.0
+
+      - name: Preload Grype Vulnerability DB
+        run: |
+          echo "\u2699\ufe0f Preloading Grype DB..."
+          grype db update || echo "\u26a0\ufe0f could not update Grype DB in CI, will rely on existing cache"
+
+      - name: Reproducible SBOM & scan
+        run: bash scripts/reprod.sh
 
       # ────────────────────────────────────────────────────────────────
       - name: 📤 Upload SBOM (CycloneDX JSON)
