--- a/.github/workflows/sbom-cve.yml
+++ b/.github/workflows/sbom-cve.yml
@@ -35,8 +35,7 @@ jobs:
 
       - name: Preload Grype Vulnerability DB
         run: |
-          echo "\u2699\ufe0f Preloading Grype DB..."
-          grype db update || echo "\u26a0\ufe0f could not update Grype DB in CI, will rely on existing cache"
+          grype db update || echo "\u26a0\ufe0f skip DB update"
 
       - name: Reproducible SBOM & scan
         run: bash scripts/reprod.sh
